--- a/index.html
+++ b/index.html
@@ -12,10 +12,17 @@
 </head>
 
 <body>
-    <!--img src="img/scale_1200.webp" alt="Менделеев"-->
-    <div class="container">
-        <div class="table" id="table">
+    <div class="content">
+        <!--img src="img/scale_1200.webp" alt="Менделеев"-->
+        <div class="container">
+            <div class="table" id="table">
 
+            </div>
+        </div>
+        <div class="container">
+            <textarea name="txt" id="txt"></textarea>
+            <button id="btn1">посмотреть элемент</button>
+            <button id="btn2">запуск</button>
         </div>
     </div>
 </body>
