--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
             <div class="table" id="table">
 
             </div>
+            <div class="lant" id="lant">
+
+            </div>
+            <div class="actin" id="actin">
+
+            </div>
         </div>
+
         <div class="container">
             <textarea name="txt" id="txt"></textarea>
             <button id="btn1">посмотреть элемент</button>
